prevent overflow

--- a/src/main.css
+++ b/src/main.css
@@ -5,9 +5,10 @@ body {
 	background-color: #d19e9e;
 	padding: 50px;
 	text-align: center;
+	overflow-x: hidden;
 }
 .container {
-    max-width: 600px;
+    max-width: 400px;
     margin: 0 auto;
     text-align: center;
     padding: 20px;
@@ -105,4 +106,10 @@ body {
 .icon-button:hover .fa-instagram,
 .icon-button:hover .fa-github{
 	color: white;
+}
+
+@media screen and (max-width: 480px) {
+    h1 {
+        font-size: 1.5em; /* Adjust font size for smaller screens */
+    }
 }
